[package]
name = "parapin"
version = "0.1.0"
authors = ["Isak Johansson <isak@irq1.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
colored = "2"
anyhow = "1.0"
structopt = "0.3.0"